# actix-web-starter

./: Cargo.toml  Dockerfile  README.md  run_actix_api.sh
src/: app_state.rs  core_args.rs  lib.rs  main.rs
src/routes/: common.rs
src/toolz/: mod.rs  scheduler.rs  utils.rs
