[package]
name = "actix-web-starter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web-actors = "4.1.0"
actix-web = "4"
clap = { version = "3.1.17", features = ["derive"] }
mongodb = "2.2.1"
log = "0.4"
env_logger = "0.9"
cron = "0.11.0"
chrono = "0.4.19"
futures-util = "0.3"
